# ec2_serial_console_with_aws_config

./: .pre-commit-config.yaml  LICENSE  README.md
cdk/: Makefile  README.md  app.py  pyproject.toml
cdk/cloudformation_extensions/ec2_serial_console_access/: .dockerignore  .gitignore  .rpdk-config  Dockerfile  README.md  awscustom-ec2-serialconsoleaccess.json  bundle-requirements.txt  resource-role.yaml  template.yml
cdk/cloudformation_extensions/ec2_serial_console_access/docs/: README.md
cdk/cloudformation_extensions/ec2_serial_console_access/src/awscustom_ec2_serialconsoleaccess/: handlers.py  models.py
cdk/src/lambdas/: ec2_serial_console.py  requirements.txt
cdk/src/lambdas/cfn_custom_resources/: check_aws_cloudtrail.py  check_aws_config.py  update_ec2_serial_console_status.py
cdk/src/serialconsole_config/: serialconsole_config_stack.py
cdk/tests/unit/: test_serialconsole_config_stack.py
cdk/tests/unit/__snapshots__/: test_serialconsole_config_stack.ambr
